--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  http: ^0.13.6
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -87,3 +85,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+fonts:
+  - family: Lobster
+    fonts:
+      - asset: assets/fonts/Lobster-Regular.ttf
+  
+assets:
+  - assets/images/flutter_logo.png
